--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -4,4 +4,6 @@
       <ion-title size="large">Settings</ion-title>
     </ion-toolbar>
   </ion-header>
+
+  <ion-button expand="block" class="ion-margin" (click)="logout()">Log Out</ion-button>
 </ion-content>
