More changes before food

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -28,7 +28,7 @@
   <div *ngIf="joined.length">
 
   </div>
-  <div *ngIf="!joined.length">
+  <div class="ion-text-center ion-padding" *ngIf="!joined.length">
     <h4>Sorry, you currently have not joined any groups</h4>
   </div>
 </ion-content>
