--- a/src/app/tab2/edit-profile/edit-profile.component.html
+++ b/src/app/tab2/edit-profile/edit-profile.component.html
@@ -4,5 +4,14 @@
     <ion-title>My Profile</ion-title>
   </ion-toolbar>
 
-
+  <form [formGroup]="form">
+    <ion-item>
+      <ion-label>First Name</ion-label>
+      <ion-input type="text" formControlName="fname"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label>Last Name</ion-label>
+      <ion-input type="text" formControlName="lname"></ion-input>
+    </ion-item>
+  </form>
 </ion-content>
