--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -8,5 +8,5 @@
     </ion-buttons>
   </ion-toolbar>
   <ion-button expand="block" class="ion-margin">Create Event</ion-button>
-  <ion-button expand="block" fill="outline" class="ion-margin">Search For Event</ion-button>
+  <ion-button expand="block" fill="outline" class="ion-margin" (click)="searchForEvent()">Search For Event</ion-button>
 </ion-content>
