--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -7,6 +7,6 @@
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
-  <ion-button expand="block" class="ion-margin">Create Event</ion-button>
-  <ion-button expand="block" fill="outline" class="ion-margin" (click)="searchForEvent()">Search For Event</ion-button>
+  <ion-button expand="block" class="ion-margin" (click)="createEvent()">Create Group</ion-button>
+  <ion-button expand="block" fill="outline" class="ion-margin" (click)="searchForEvent()">Search For Group</ion-button>
 </ion-content>
