--- a/src/app/tab2/create-event/create-event.component.html
+++ b/src/app/tab2/create-event/create-event.component.html
@@ -25,10 +25,10 @@
         <ion-grid>
             <ion-row>
                 <ion-col>
-                    <ion-button class="ion-margin ion-text-center" expand="block" color="warning">Cancel</ion-button>
+                    <ion-button class="ion-margin ion-text-center" expand="block" color="warning" (click)="dismiss()">Cancel</ion-button>
                 </ion-col>
                 <ion-col>
-                    <ion-button class="ion-margin ion-text-center" expand="block" color="success" (click)="dismiss()">Submit</ion-button>
+                    <ion-button class="ion-margin ion-text-center" expand="block" color="success" (click)="submit()">Submit</ion-button>
                 </ion-col>
             </ion-row>
         </ion-grid>
