--- a/src/app/tab2/create-event/create-event.component.html
+++ b/src/app/tab2/create-event/create-event.component.html
@@ -1,34 +1,32 @@
+<ion-header>
+    <ion-toolbar>
+        <ion-buttons slot="start">
+            <ion-back-button></ion-back-button>
+        </ion-buttons>
+        <ion-title>
+            Create Group
+        </ion-title>
+    </ion-toolbar>
+</ion-header>
 <ion-content [fullscreen]="true">
-    <ion-header>
-        <ion-toolbar>
-            <ion-buttons slot="start">
-                <ion-back-button></ion-back-button>
-            </ion-buttons>
-            <ion-title>
-                Create Group
-            </ion-title>
-        </ion-toolbar>
-    </ion-header>
-    <form [formGroup]="form">
-        <ion-item>
+    <form>
+        <div class="ion-padding">
             <ion-label>Group Name</ion-label>
-            <ion-input type="text" formControlName="name"></ion-input>
-        </ion-item>
-        <ion-item>
+            <ion-input type="text" [(ngModel)]="group.name" placeholder="Type here"></ion-input>
+        </div>
+        <div class="ion-padding global-input">
             <ion-label>Group slug (used to add your group)</ion-label>
-            <ion-input type="text" formControlName="slug"></ion-input>
-        </ion-item>
-        <ion-item>
-            <ion-label></ion-label>
-            <ion-input></ion-input>
-        </ion-item>
+            <ion-input type="text" [(ngModel)]="group.slug" placeholder="Type here"></ion-input>
+        </div>
+        <div>
+        </div>
         <ion-grid>
             <ion-row>
                 <ion-col>
                     <ion-button class="ion-margin ion-text-center" expand="block" color="warning" (click)="dismiss()">Cancel</ion-button>
                 </ion-col>
                 <ion-col>
-                    <ion-button class="ion-margin ion-text-center" expand="block" color="success" (click)="submit()">Submit</ion-button>
+                    <ion-button class="ion-margin ion-text-center" expand="block" color="success" (click)="submit()">Create</ion-button>
                 </ion-col>
             </ion-row>
         </ion-grid>
