--- a/src/app/auth/register/register.page.html
+++ b/src/app/auth/register/register.page.html
@@ -14,6 +14,10 @@
       <ion-input type="text" formControlName="email"></ion-input>
     </ion-item>
     <ion-item>
+      <ion-label>Profession</ion-label>
+      <ion-input type="text" formControlName="profession"></ion-input>
+    </ion-item>
+    <ion-item>
       <ion-label>Phone Number</ion-label>
       <ion-input type="phone" formControlName="phone"></ion-input>
     </ion-item>
