--- a/src/app/components/list-users-group/list-users-group.component.html
+++ b/src/app/components/list-users-group/list-users-group.component.html
@@ -1,8 +1,8 @@
 <ion-header *ngIf="!!group">
-    <ion-toolbar>
+    <ion-toolbar>`
         <ion-buttons slot="start">
             <ion-back-button></ion-back-button>
-        </ion-buttons>
+        </ion-buttons>`
         <ion-title>
             {{ group.name }}
         </ion-title>
