--- a/src/app/tab2/edit-profile/edit-profile.component.html
+++ b/src/app/tab2/edit-profile/edit-profile.component.html
@@ -1,17 +1,30 @@
 
-<ion-content [fullscreen]="true">
+<ion-header>
+  <ion-buttons slot="start">
+    <ion-back-button></ion-back-button>
+  </ion-buttons>
   <ion-toolbar>
     <ion-title>My Profile</ion-title>
   </ion-toolbar>
-
+</ion-header>
+<ion-content [fullscreen]="true" class="ion-padding">
   <form [formGroup]="form">
-    <ion-item>
+    <div class="ion-padding-vertical">
       <ion-label>First Name</ion-label>
       <ion-input type="text" formControlName="fname"></ion-input>
-    </ion-item>
-    <ion-item>
+    </div>
+    <div class="ion-padding-vertical">
       <ion-label>Last Name</ion-label>
       <ion-input type="text" formControlName="lname"></ion-input>
-    </ion-item>
+    </div>
+    <div class="ion-padding-vertical">
+      <ion-label>E-mail</ion-label>
+      <ion-input type="text" formControlName="email"></ion-input>
+    </div>
+    <div class="ion-padding-vertical">
+      <ion-label>Profession</ion-label>
+      <ion-input type="text" formControlName="profession"></ion-input>
+    </div>
+    <ion-button (click)="update()" [disabled]="form.pristine">Update</ion-button>
   </form>
 </ion-content>
